[package]
name = "byte-pusher-emu"
version = "0.2.0"
edition = "2021"
license = "BSD-3"
authors = ["chrisvrose"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.20"
simple_logger = "4.3"
byteorder = "1.5"
sdl2 = "0.36.0"

[profile.release]
strip = true
lto = true
